--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -14,6 +14,7 @@
             "3": "3",
             "4": "4",
             "5": "5",
+	    "6": "6",
             "urgent": "⚠️",
             "focused": "▶️",
             "default": "⏺️"
@@ -24,7 +25,7 @@
   	"tooltip-format": "I'm using Arch BTW",
   	"tooltip": true,
   	"format-icons": {
-    	"default": "󰣇" // Nerd Font Arch logo
+    	"default": "󰣇"
   			},
   	"on-click": "wofi --show drun"
 	},
@@ -32,16 +33,16 @@
     	"format": "{}",
     	"interval": 1,
     	"exec": "~/.config/waybar/scripts/player_status.sh",
-    	"on-click": "playerctl play-pause",
-    	"on-click-right": "playerctl next",
-    	"on-click-middle": "playerctl previous",
+    	"on-click": "playerctl -p $(cat ~/.config/waybar/scripts/active_player) play-pause",
+    	"on-click-right": "~/.config/waybar/scripts/switch_player.sh",
+    	"on-click-middle": "playerctl -p $(cat ~/.config/waybar/scripts/active_player) previous",
     	"tooltip": false
 	},
     "custom/notifications": {
     	"exec": "~/.config/waybar/scripts/notifications.sh",
     	"interval": 2,
-    	"format": "{}",  // This tells Waybar to parse JSON
-    	"return-type": "json",  // 👈 This line is CRUCIAL
+    	"format": "{}", 
+    	"return-type": "json",
     	"on-click": "bash -c 'dunstctl history-pop; sleep 1; dunstctl history-clear'",
     	"on-click-right": "dunstctl set-paused toggle"
 	},
